--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,23 @@ body {
 
 .App {
   text-align: center;
-  background-color: navy;
-  color: white;
+  /*background-color: navy;
+  color: white;*/
 }
 
-.page-divider {
-  display: block;
-  width: 100%;
-  height: auto;
+#topImage {
+  background-image: url("./Components/photos/top-photo.jpg");
+  height: 125vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
+
+/*.page-divider {
+  display: block;
+  width: auto;
+  height: auto;
+}*/
 /*.App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
