still messing with top image

--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,15 @@ body {
 #topImage {
   background-image: url("./Components/photos/top-photo.jpg");
   height: 125vh;
-  width: 100vw;
+  width: 125vw;
   background-repeat: no-repeat;
   background-size: contain;
 }
-
+/*
+#LCheader {
+  color: rgb(255, 231, 174);
+  font-size: 500%;
+}*/
 /*.page-divider {
   display: block;
   width: auto;
