--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 body {
   display: block;
-  margin: 0px;
+  margin: 0;
 }
 
 .App {
   text-align: center;
+  background-color: rgb(243, 245, 248);
+  color: #696969;
 }
 
 .responsive {
