--- a/src/App.css
+++ b/src/App.css
@@ -15,18 +15,23 @@ body {
   height: auto;
 }
 
-.top-right-yellow {
-  position: absolute;
-  top: 4%;
-  right: 2%;
-  color: rgb(255, 221, 164);
+.bottom-middle {
+  position: relative;
+  bottom: 50px;
 }
 
-.top-right-white {
+.top-right {
   position: absolute;
   top: 4%;
   right: 2%;
+}
+
+.white {
   color: white;
+}
+
+.yellowish {
+  color: rgb(255, 221, 164);
 }
 
 .section-div {
