--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,12 @@ body {
   text-align: left;
   margin-top: 2%;
 }
+
+.inline-block {
+  display: inline-block;
+  margin: 1%;
+}
+
+h6 {
+  margin-top: 0px;
+}
